--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Roon Labs, LLC",
   "license": "Apache-2.0",
   "dependencies": {
+    "debug": "^4.4.0",
     "ip": "^2.0.1",
     "node-uuid": "^1.4.8",
     "ws": ">=3.3.1"
